# popmart-agent

./: .env.example  .gitignore  README.md  agent.py  agent_rag.py  api.py  app.py  hello_llm.py  index.md  interview-qa-prep.md  log.md  main.py  narrative-script.md  pyproject.toml  rag_agent.py  resume-project-bullets.md  run_demo.bat  run_demo.sh  self-check-list.md
.streamlit/: config.toml
analysis/: 01-business-model.md  02-pain-points.md  03-risk-radar.md  04-agent-opportunity-map.md
demo-screenshots/: pw-b-probe-result.json  revert-result.json  ux-01-home.txt  ux-02-after-preset.txt  ux-03-data-view.txt  ux-04-mobile.txt  ux-05-result.txt  ux-after-query.txt  ux-chat-after-preset.txt  ux-chat-final.txt  ux-chat-send.txt  ux-data.txt  ux-default-landing.txt  ux-home-after-new.txt  ux-home-after-settings.txt  ux-home-final.txt  ux-home-v2.txt  ux-home-v2b.html  ux-home-v2b.txt  ux-home-v3.txt  ux-home-v4.txt  ux-settings.txt
design/: agent-anti-counterfeit.md  agent-consumer-insights.md  agent-ip-intelligence.md  agent-supply-chain.md  architecture-overview.md  popmart-architecture.architecture.json  popmart-architecture.html
docs/: refactor-2026-07-05-ui.md  troubleshooting-2026-07-15-reload-stale-server.md  ux-security-2026-07-11.md
frontend/: IMAGE_REQUIREMENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  screenshot-history.mjs  screenshot-pages.mjs  screenshot-unified.mjs
phase5_tools/: __init__.py  tool_executor.py  tool_registry.py
phase6_react/: __init__.py  react_core.py
phase7_rag/: __init__.py  (+1 more)
(+170 files in other folders)
