[project]
name = "agent-from-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
