[project]
name = "popmart-agent-refactor"
version = "0.1.0"
description = "泡泡玛特 Agent 生产级重构 — 字节跳动 Seed Agent 面试项目"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
